$Id$


				MBSEBBS History.

v0.35.03	06-Jul-2002

	common.a:
		Added nodelist override to the nodelist lookup function.
		Added protection against emty rfc headers with only a space.

	lang:
		Corrected a spelling error in the Dutch language file.

	mbcico:
		Changed IsDoing information.
		Makes use of the node nodelist override settings.

	mbout:
		Makes use of the node nodelist override settings.

	mbfido:
		Rollover now only sets IsDoing when it really does a date
		rollover.
		When a new tic area was created the first file received for
		that area was refused.
		Fixed a few problems with local UUCP created netmails.
		Added routing tables for special cases. Most systems don't
		need this.
		The route test command now works exactly as netmails do.

	newuser:
		Check for Unix accounts is now case sensitive.
		Check existing usernames now also checks handles.

	mbsebbs:
		Check existing usernames now also checks handles.
		When a user paged the sysop for a chat, after the timer was
		expired, the bbs crashed.
		Fixed a problem with extra spaces in UUCP replyto address.

	mbtask:
		Changed logging of multiple logmessages that are equal.
		Changed semafore debug logmessages.
		Fixed log problem not always showing the Call flag.
		Now forces callmode to None if the callflag was cleared.
		The test to add a node to the calllist now also checks the
		internal call flag.
		Makes use of the node nodelist override settings.

	mbsetup:
		Enabled setting of nodelist override settings in menu 7.x.3
		After nodes setup edit the semafore scanout is set.
		When a JAM messagebase path is changed in one of the message
		area, filefind and newfiles records are automatic updated if
		they were connected to that area.
		Added setup for routing the table.

	script:
		The bbsdoor.sh and rundoor.sh scripts are now only installed
		if they were not installed before.

	examples:
		With the aid of a little utility (endian) the right menus are